fix: Handle MalformedURLException when retrieving links in Document.retrieveFromWeb